--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "OAuth SEPLAG",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "consign": "^0.1.6",
@@ -16,6 +18,7 @@
     "helmet": "^3.21.3",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.4",
     "npm": "^6.13.7"
   },
   "devDependencies": {
