--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.4",
+    "mongoose": "^5.9.4",
     "npm": "^6.13.7"
   },
   "devDependencies": {
