adaptando userdb reuniao lf

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "keywords": [
     "OAuth"
   ],
-  "author": "Michel",
+  "author": "DDT",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/micxcode/OAuth/issues"
